<resources>
    <string name="app_name">在线聊天</string>
    <string name="title_activity_hall">HallActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">用户名，不能超过18个字符哦~</string>
    <string name="finish">完成</string>
    <string name="prompt">新聊天室的名字，不可超过20字符哦~</string>
    <string name="searchPrompt">要搜索房间的名字</string>
    <string name="signup">注册</string>
    <string name="newChatRoom">新建聊天室</string>
    <string name="searchChatRoom">搜索聊天室</string>
</resources>