<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewChatRoomActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp">

        <Toolbar
            android:title="@string/newChatRoom"
            android:titleTextColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/newChatRoomName"
        android:inputType="text"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:hint="@string/prompt"
        android:textColorHint="#95A1AA" />

    <Button
        style="@style/button"
        android:id="@+id/finish"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/newChatRoomName"
        android:text="@string/finish" />

</RelativeLayout >